--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>My Static Website</title>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World!</h1>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
 
